# radial-menu

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  mouse_shortcut.rs  stream.rs  system_stats.rs
src/components/: AppPreferencesModal.vue  ConfigWindow.vue  MenuItemFormModal.vue  MenuItemIcon.vue  MenuItemsPanel.vue  RadialMenu.vue  RadialMenuItem.vue  RadialMenuPreview.vue  SettingsPlaceholder.vue  SystemStatus.vue
src/composables/: useMenuActions.ts  useObsStreamStatus.ts  useResolvedMenuIcon.ts  useSystemStats.ts
src/config/: menu.json
src/styles/: main.css
src/types/: menu.ts  systemStats.ts
